# sunfish

./: new_packed.sh  packed.sh  pyproject.toml  sunfish.sh  sunfish_llm  sunfish_llm.sh  sunfish_nnue.py  sunfish_old.py  sunfish_old.sh  test_sunfish.py
chess_llm_db/: constants.py  gpt_dataset.py  gpt_model.py  gpt_trainer.py
chess_llm_db/.ipynb_checkpoints/: chess_tokenizer-checkpoint.py
tools/: fancy.py
